# modl

./: Cargo.toml  README.md  build.rs
src/: camera.rs  main.rs  model.rs  resources.rs  shader.wgsl  texture.rs
src/shaders/: default.wgsl  light.wgsl
